--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container header__content">
       <nav class="header__nav">
         <ul>
-          <img src="/assets/svg/CLIMES SVG 1.svg"  class="header__logo" alt="Logo da Clínica">
+          <img src="./assets/svg/CLIMES SVG 1.svg"  class="header__logo" alt="Logo da Clínica">
           <li><a href="#sobre">Início</a></li>
           <li><a href="#especialidades">Sobre nós</a></li>
           <li><a href="#tratamentos">Especialidades</a></li>
