--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
 
       <!-- Grid A: 2 colunas + imagem wide -->
       <div class="about__grid grid-two">
-        <img src="/assets/sobre/primeira.png" alt="Foto Clínica 1">
-        <img src="/assets/sobre/segunda.png" alt="Foto Clínica 2">
-        <img src="/assets/sobre/wide.png" alt="Foto Clínica Wide" class="wide">
+        <img src="assets/sobre/primeira.png" alt="Foto Clínica 1">
+        <img src="assets/sobre/segunda.png" alt="Foto Clínica 2">
+        <img src="assets/sobre/wide.png" alt="Foto Clínica Wide" class="wide">
       </div>
     
       <!-- Grid B: 3 colunas para 3 imagens finais -->
       <div class="about__grid grid-three">
-        <img src="/assets/sobre/teceira.png" alt="Foto Clínica 4">
-        <img src="/assets/sobre/quarta.png" alt="Foto Clínica 5">
-        <img src="/assets/sobre/quinta.png" alt="Foto Clínica 6">
+        <img src="assets/sobre/teceira.png" alt="Foto Clínica 4">
+        <img src="assets/sobre/quarta.png" alt="Foto Clínica 5">
+        <img src="assets/sobre/quinta.png" alt="Foto Clínica 6">
       </div>
     
     </div>
@@ -83,12 +83,12 @@
         </div>
         <div class="cards" >
           <div class="card">
-            <img src="/assets/svg/Group.svg" alt="Imagem 1">
+            <img src="assets/svg/Group.svg" alt="Imagem 1">
             <h2>Equipe Qualificada</h2>
             <p>Profissionais experientes prontos<br> para cuidar da sua saúde com<br> excelência.</p>
           </div>
           <div class="card">
-            <img src="/assets/svg/check.svg" alt="Imagem 1">
+            <img src="assets/svg/check.svg" alt="Imagem 1">
             <h2>Infraestrutura Moderna</h2>
             <p>Ambientes projetados para oferecer<br> conforto e tecnologia de última<br> geração.</p>
           </div>
@@ -96,7 +96,7 @@
       </div>
 
       <div class="differentials__photos">
-        <img src="/assets/diferenciais/1.png" alt="Imagem Vertical 1">
+        <img src="assets/diferenciais/1.png" alt="Imagem Vertical 1">
         <img src="assets/diferenciais/2.png" alt="Imagem Vertical 2">
       </div>
     </div>
@@ -112,34 +112,34 @@
     <div class="swiper-wrapper">
       <!-- Slides originais -->
       <div class="swiper-slide">
-        <img src="/assets/swiper/center.png" alt="Botox">
+        <img src="assets/swiper/center.png" alt="Botox">
         <h2>Botóx</h2>
         <a href="#" class="btn-more">Saber mais</a>
       </div>
       <div class="swiper-slide">
-        <img src="/assets/swiper/right.png" alt="Tratamento 2">
+        <img src="assets/swiper/right.png" alt="Tratamento 2">
         <h2>Tratamento 2</h2>
         <a href="#" class="btn-more">Saber mais</a>
       </div>
       <div class="swiper-slide">
-        <img src="/assets/swiper/left.png" alt="Tratamento 3">
+        <img src="assets/swiper/left.png" alt="Tratamento 3">
         <h2>Tratamento 3</h2>
         <a href="#" class="btn-more">Saber mais</a>
       </div>
 
       <!-- Duplicados manualmente -->
       <div class="swiper-slide">
-        <img src="/assets/swiper/center.png" alt="Botox">
+        <img src="assets/swiper/center.png" alt="Botox">
         <h2>Botóx</h2>
         <a href="#" class="btn-more">Saber mais</a>
       </div>
       <div class="swiper-slide">
-        <img src="/assets/swiper/right.png" alt="Tratamento 2">
+        <img src="assets/swiper/right.png" alt="Tratamento 2">
         <h2>Tratamento 2</h2>
         <a href="#" class="btn-more">Saber mais</a>
       </div>
       <div class="swiper-slide">
-        <img src="/assets/swiper/left.png" alt="Tratamento 3">
+        <img src="assets/swiper/left.png" alt="Tratamento 3">
         <h2>Tratamento 3</h2>
         <a href="#" class="btn-more">Saber mais</a>
       </div>
@@ -160,21 +160,21 @@
       <!-- Rebeca (vídeo) -->
       <div class="testimonial-card card-top">
         <div class="testimonial-header">
-          <img src="/assets/testimonials/rebecaa.png" alt="Rebeca Lopes">
+          <img src="assets/testimonials/rebecaa.png" alt="Rebeca Lopes">
           <div>
             <h3>Rebeca Lopes</h3>
             <span>via Instagram</span>
           </div>
         </div>
         <div class="testimonial-body">
-          <img src="/assets/testimonials/rebeca.png" alt="Depoimento visual">
+          <img src="assets/testimonials/rebeca.png" alt="Depoimento visual">
         </div>
       </div>
 
       <!-- Samara (texto) -->
       <div class="testimonial-card card-bottom">
         <div class="testimonial-header">
-          <img src="/assets/testimonials/samara.png" alt="Samara Daoud">
+          <img src="assets/testimonials/samara.png" alt="Samara Daoud">
           <div>
             <h3>Samara Daoud</h3>
             <span>via Google Maps</span>
@@ -191,7 +191,7 @@
       <!-- Larissa (texto) -->
       <div class="testimonial-card card-top">
         <div class="testimonial-header">
-          <img src="/assets/testimonials/lari.png" alt="Larissa Cunha">
+          <img src="assets/testimonials/lari.png" alt="Larissa Cunha">
           <div>
             <h3>Larissa Cunha</h3>
             <span>via Google Maps</span>
@@ -205,14 +205,14 @@
       <!-- Jefferson (vídeo) -->
       <div class="testimonial-card card-bottom">
         <div class="testimonial-header">
-          <img src="/assets/testimonials/jeff.jpg" alt="Jefferson">
+          <img src="assets/testimonials/jeff.jpg" alt="Jefferson">
           <div>
             <h3>Jefferson</h3>
             <span>via Instagram</span>
           </div>
         </div>
         <div class="testimonial-body">
-          <img src="/assets/testimonials/jeff2.png" alt="Depoimento visual">
+          <img src="assets/testimonials/jeff2.png" alt="Depoimento visual">
         </div>
       </div>
     </div>
@@ -222,21 +222,21 @@
       <!-- Viviane (vídeo) -->
       <div class="testimonial-card card-top">
         <div class="testimonial-header">
-          <img src="/assets/testimonials/vivi.png" alt="Viviane">
+          <img src="assets/testimonials/vivi.png" alt="Viviane">
           <div>
             <h3>Viviane</h3>
             <span>via Instagram</span>
           </div>
         </div>
         <div class="testimonial-body">
-          <img src="/assets/testimonials/vivi2.png" alt="Depoimento visual">
+          <img src="assets/testimonials/vivi2.png" alt="Depoimento visual">
         </div>
       </div>
 
       <!-- Rosa (texto) -->
       <div class="testimonial-card card-bottom">
         <div class="testimonial-header">
-          <img src="/assets/testimonials/rosa.png" alt="Rosa Pires">
+          <img src="assets/testimonials/rosa.png" alt="Rosa Pires">
           <div>
             <h3>Rosa Pires</h3>
             <span>via Google Maps</span>
@@ -268,17 +268,17 @@
       <div class="footer__actions">
         <a href="#agendar" class="btn-primary-large">Agende uma consulta</a>
         <div class="footer__socials">
-          <a href="#"><img src="/assets/svg/mdi_instagram.svg" alt="Instagram"></a>
-          <a href="#"><img src="/assets/svg/eva_email-outline.svg" alt="E-mail"></a>
-          <a href="#"><img src="/assets/svg/mingcute_google-fill.svg" alt="Google Maps"></a>
-          <a href="#"><img src="/assets/svg/material-symbols_call.svg" alt="Telefone"></a>
+          <a href="#"><img src="assets/svg/mdi_instagram.svg" alt="Instagram"></a>
+          <a href="#"><img src="assets/svg/eva_email-outline.svg" alt="E-mail"></a>
+          <a href="#"><img src="assets/svg/mingcute_google-fill.svg" alt="Google Maps"></a>
+          <a href="#"><img src="assets/svg/material-symbols_call.svg" alt="Telefone"></a>
         </div>
       </div>
     </div>
 
     <!-- Direita: Imagem do Médico -->
     <div class="footer__image">
-      <img src="/assets/footer/médico edit.png" alt="Médico">
+      <img src="assets/footer/médico edit.png" alt="Médico">
     </div>
 
   </div>
