--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container header__content">
       <nav class="header__nav">
         <ul>
-          <img src="./assets/svg/CLIMES SVG 1.svg"  class="header__logo" alt="Logo da Clínica">
+          <img src=" assets/svg/CLIMES SVG 1.svg"  class="header__logo" alt="Logo da Clínica">
           <li><a href="#sobre">Início</a></li>
           <li><a href="#especialidades">Sobre nós</a></li>
           <li><a href="#tratamentos">Especialidades</a></li>
@@ -54,16 +54,16 @@
 
       <!-- Grid A: 2 colunas + imagem wide -->
       <div class="about__grid grid-two">
-        <img src="assets/sobre/primeira.png" alt="Foto Clínica 1">
-        <img src="assets/sobre/segunda.png" alt="Foto Clínica 2">
-        <img src="assets/sobre/wide.png" alt="Foto Clínica Wide" class="wide">
+        <img src=" assets/sobre/primeira.png" alt="Foto Clínica 1">
+        <img src=" assets/sobre/segunda.png" alt="Foto Clínica 2">
+        <img src=" assets/sobre/wide.png" alt="Foto Clínica Wide" class="wide">
       </div>
     
       <!-- Grid B: 3 colunas para 3 imagens finais -->
       <div class="about__grid grid-three">
-        <img src="assets/sobre/teceira.png" alt="Foto Clínica 4">
-        <img src="assets/sobre/quarta.png" alt="Foto Clínica 5">
-        <img src="assets/sobre/quinta.png" alt="Foto Clínica 6">
+        <img src=" assets/sobre/teceira.png" alt="Foto Clínica 4">
+        <img src=" assets/sobre/quarta.png" alt="Foto Clínica 5">
+        <img src=" assets/sobre/quinta.png" alt="Foto Clínica 6">
       </div>
     
     </div>
