--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     
       <!-- Grid B: 3 colunas para 3 imagens finais -->
       <div class="about__grid grid-three">
-        <img src=" assets/sobre/teceira.png" alt="Foto Clínica 4">
+        <img src=" assets/sobre/terceira.png" alt="Foto Clínica 4">
         <img src=" assets/sobre/quarta.png" alt="Foto Clínica 5">
         <img src=" assets/sobre/quinta.png" alt="Foto Clínica 6">
       </div>
@@ -294,7 +294,7 @@
 
     <!-- Direita: Imagem do Médico -->
     <div class="footer__image">
-      <img src="assets/footer/médico edit.png" alt="Médico">
+      <img src="assets/footer/doctor.png" alt="Médico">
     </div>
 
   </div>
