copy and layout atualizado

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <h1>Clínica médica<br> referência em Mogi<br> das Cruzes e região</h1>
         <p>Somos referência em <b>saúde integrativa, emagrecimento</b> e diversas especialidades médicas. Nossa equipe é dedicada a oferecer um <b>atendimento individualizado</b> e de <b>qualidade.</b></p>
         <div class="hero__buttons">
-          <a href="#agendar" class="btn-primary">Agendar Consulta</a>
-          <a href="#tratamentos" class="botao-glass">Conhecer Tratamentos</a>
+          <a href="#agendar" class="btn-primary">Agendar uma Consulta</a>
+          <a href="#tratamentos" class="botao-glass">Conhecer nossos Tratamentos</a>
         </div>
       </div>
     </div>
