update embeded short videos

--- a/index.html
+++ b/index.html
@@ -185,19 +185,29 @@
 
     <!-- Coluna 1 -->
     <div class="testimonial-column column-1">
-      <!-- Rebeca (vídeo) -->
-      <div class="testimonial-card card-top">
-        <div class="testimonial-header">
-          <img src="assets/testimonials/rebecaa.png" alt="Rebeca Lopes">
-          <div>
-            <h3>Rebeca Lopes</h3>
-            <span>via Instagram</span>
-          </div>
-        </div>
-        <div class="testimonial-body">
-          <img src="assets/testimonials/rebeca.png" alt="Depoimento visual">
-        </div>
+  <!-- Rebeca (vídeo) -->
+  <div class="testimonial-card card-top">
+    <div class="testimonial-header">
+      <img src="assets/testimonials/rebecaa.png" alt="Rebeca Lopes">
+      <div>
+        <h3>Rebeca Lopes</h3>
+        <span>via Instagram</span>
       </div>
+    </div>
+    <div class="testimonial-body">
+      <div class="video-container">
+      <iframe class="youtube-video"
+        width="315"
+        height="560"
+        src="https://www.youtube.com/embed/Z8CXL4JRBR0?playsinline=1"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+      </div>
+    </div>
+  </div>
 
       <!-- Samara (texto) -->
       <div class="testimonial-card card-bottom">
@@ -240,7 +250,17 @@
           </div>
         </div>
         <div class="testimonial-body">
-          <img src="assets/testimonials/jeff2.png" alt="Depoimento visual">
+            <div class="video-container">
+      <iframe class="youtube-video"
+        width="315"
+        height="560"
+        src="https://www.youtube.com/embed/DuuYgdk-dwU?playsinline=1"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+      </div>
         </div>
       </div>
     </div>
@@ -257,7 +277,17 @@
           </div>
         </div>
         <div class="testimonial-body">
-          <img src="assets/testimonials/vivi2.png" alt="Depoimento visual">
+            <div class="video-container">
+      <iframe class="youtube-video"
+        width="315"
+        height="560"
+        src="https://www.youtube.com/embed/JDwz1rX_-Bg?playsinline=1"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+      </div>
         </div>
       </div>
 
