att some components

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <p>Profissionais experientes prontos<br> para cuidar da sua saúde com<br> excelência.</p>
           </div>
           <div class="card">
-            <img src="assets/svg/check.svg" alt="Imagem 1">
+            <img src="assets/svg/check.svg" alt="Imagem 2">
             <h2>Infraestrutura Moderna</h2>
             <p>Ambientes projetados para oferecer<br> conforto e tecnologia de última<br> geração.</p>
           </div>
@@ -124,12 +124,17 @@
       </div>
 
       <div class="differentials__photos">
-        <img src="assets/diferenciais/1.png" alt="Imagem Vertical 1">
-        <img src="assets/diferenciais/2.png" alt="Imagem Vertical 2">
+        <div class="gradient-border">
+          <img src="assets/diferenciais/1.png" alt="Imagem Vertical 1">
+        </div>
+        <div class="gradient-border">
+          <img src="assets/diferenciais/2.png" alt="Imagem Vertical 2">
+        </div>
       </div>
     </div>
   </div>
 </section>
+
 
 <!-- Especialidades -->
 <section class="specialties">
