nova atualização do site, preguiça de colocar escrever esse commit

--- a/index.html
+++ b/index.html
@@ -141,40 +141,20 @@
   <h1>Nossas Especialidades</h1>
   <p>Tratamentos que são <strong>um sucesso</strong> aqui na Climes.</p>
 
-  <div class="swiper specialties__swiper">
-    <div class="swiper-wrapper">
-      <!-- Slides originais -->
-      <div class="swiper-slide">
-        <img src="assets/swiper/center.png" alt="Botox">
-        <h2>Botóx</h2>
-        <a href="#" class="btn-more">Saber mais</a>
+  <div class="specialties__rows">
+    <div class="specialties__row__container">
+      <div class="specialties__row">
+        <img src="/assets/swiper/urinário.png" alt="Botox">
+        <h2>Incontinência Urinária</h2>  
       </div>
-      <div class="swiper-slide">
-        <img src="assets/swiper/right.png" alt="Tratamento 2">
-        <h2>Tratamento 2</h2>
-        <a href="#" class="btn-more">Saber mais</a>
+      <div class="specialties__row">
+        <img src="assets/swiper/emagrecimento.png" alt="Tratamento 2">
+        <h2>Emagrecimento</h2>
+        
       </div>
-      <div class="swiper-slide">
-        <img src="assets/swiper/left.png" alt="Tratamento 3">
-        <h2>Tratamento 3</h2>
-        <a href="#" class="btn-more">Saber mais</a>
-      </div>
-
-      <!-- Duplicados manualmente -->
-      <div class="swiper-slide">
-        <img src="assets/swiper/center.png" alt="Botox">
-        <h2>Botóx</h2>
-        <a href="#" class="btn-more">Saber mais</a>
-      </div>
-      <div class="swiper-slide">
-        <img src="assets/swiper/right.png" alt="Tratamento 2">
-        <h2>Tratamento 2</h2>
-        <a href="#" class="btn-more">Saber mais</a>
-      </div>
-      <div class="swiper-slide">
-        <img src="assets/swiper/left.png" alt="Tratamento 3">
-        <h2>Tratamento 3</h2>
-        <a href="#" class="btn-more">Saber mais</a>
+      <div class="specialties__row">
+        <img src="assets/swiper/soroterapia.png" alt="Tratamento 3">
+        <h2>Soroterapia</h2>
       </div>
     </div>
 
