--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 <div class="brown-line"></div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
 <script src="scripts.js" defer></script>
 </body>
 </html>
