por algum motivo tem uma foto que não ta subindo

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <div class="specialties__rows">
     <div class="specialties__row__container">
       <div class="specialties__row">
-        <img src="/assets/swiper/urinario.png" alt="Botox">
+        <img src="/assets/swiper/tratamento.png" alt="Botox">
         <h2>Incontinência Urinária</h2>  
       </div>
       <div class="specialties__row">
