--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
         <div class="gradient-border">
           <img src="assets/diferenciais/2.png" alt="Imagem Vertical 2">
         </div>
+        <div class="gradient-border gradient-border-mobile">
+          <img src="assets/diferenciais/1_mobile.png" alt="Imagem Vertical 1">
+        </div>
+        <div class=" gradient-border gradient-border-mobile">
+          <img src="assets/diferenciais/2_mobile.png" alt="Imagem Vertical 2">
+        </div>
       </div>
     </div>
   </div>
