--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     <div class="about__text">
       <h1>Inovação e cuidado em<br> tratamentos modernos</h1>
       <p>Desde 2004, trazendo excelência em <b>Ginecologia e<br> Obstetrícia</b> proporcionando a <b>recuperação de sua<br> autoconfiança</b> com procedimentos que<br> <b>rejuvenescem, fortalecem e revitalizam.</b></p>
-      <a href="#agendar" class="btn-about">Agendar uma Consulta</a>
+      <div class="gradient-btn">
+        <button class="btn-about">Agendar uma Consulta</button>
+      </div>
     </div>
     <div class="about__gallery">
 
@@ -150,16 +152,23 @@
     <div class="specialties__row__container">
       <div class="specialties__row">
         <img src="assets/swiper/tratamento.png" alt="Botox">
-        <h2>Incontinência Urinária</h2>  
+        <div class="gradient-h2">
+          <h2>Incontinência Urinária</h2>
+        </div>
       </div>
+
       <div class="specialties__row">
         <img src="assets/swiper/emagrecimento.png" alt="Tratamento 2">
-        <h2>Emagrecimento</h2>
+        <div class="gradient-h2">
+          <h2>Emagrecimento</h2>
+        </div>
         
       </div>
       <div class="specialties__row">
         <img src="assets/swiper/soroterapia.png" alt="Tratamento 3">
-        <h2>Soroterapia</h2>
+        <div class="gradient-h2">
+          <h2>Soroterapia</h2>
+        </div>
       </div>
     </div>
 
