color testimonials body p modi

--- a/index.html
+++ b/index.html
@@ -152,27 +152,25 @@
     <div class="specialties__row__container">
       <div class="specialties__row">
         <img src="assets/swiper/tratamento.png" alt="Botox">
-        <div class="gradient-h2">
+        <div class="gradient-h2 h2-1">
           <h2>Incontinência Urinária</h2>
         </div>
       </div>
 
       <div class="specialties__row">
         <img src="assets/swiper/emagrecimento.png" alt="Tratamento 2">
-        <div class="gradient-h2">
+        <div class="gradient-h2  h2-2">
           <h2>Emagrecimento</h2>
         </div>
         
       </div>
       <div class="specialties__row">
         <img src="assets/swiper/soroterapia.png" alt="Tratamento 3">
-        <div class="gradient-h2">
+        <div class="gradient-h2 h2-3">
           <h2>Soroterapia</h2>
         </div>
       </div>
     </div>
-
-    <div class="swiper-button-next"></div>
   </div>
 </section>
 
