--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Nav principal -->
     <nav class="header__nav">
       <ul>
-        <li><a href="#inicio">Início</a></li>
+        <li><a href="https://climesclinica.com.br/">Início</a></li>
         <li><a href="#sobre">Sobre nós</a></li>
         <li><a href="#especialidades">Especialidades</a></li>
         <li><a href="#diferenciais">Diferenciais</a></li>
@@ -37,20 +37,20 @@
 
     <!-- Botão WhatsApp -->
     <div class="header__contact">
-      <a href="#contato" class="btn-primary">Fale com a gente no WhatsApp</a>
+      <a href="https://wa.me/5511998364805?text=Ol%C3%A1%2C%20vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn-primary">Fale com a gente no WhatsApp</a>
     </div>
   </div>
 </header>
 
   <!-- Big Hero -->
-  <section  id="hero" class="hero">
+  <section  id="inicio" class="hero">
     <div class="hero__overlay">
       <div class="hero__content">
         <h1>Clínica médica<br> referência em Mogi<br> das Cruzes e região</h1>
         <p>Somos referência em <b>saúde integrativa, emagrecimento</b> e diversas especialidades médicas. Nossa equipe é dedicada a oferecer um <b>atendimento individualizado</b> e de <b>qualidade.</b></p>
         <div class="hero__buttons">
-          <a href="#agendar" class="btn-primary">Agendar uma Consulta</a>
-          <a href="#tratamentos" class="botao-glass">Conhecer nossos Tratamentos</a>
+          <a href="https://wa.me/5511998364805?text=Ol%C3%A1%2C%20vim%20do%20site%20e%20gostaria%20de%20agendar%20uma%20consulta." class="btn-primary">Agendar uma Consulta</a>
+          <a href="#especialidades" class="botao-glass">Conhecer nossos Tratamentos</a>
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
 
 
   <!-- Sobre -->
-<section class="about">
+<section class="about" id="sobre">
   <div class="container about__content">
     <div class="about__text">
       <h1>Inovação e cuidado em<br> tratamentos modernos</h1>
@@ -101,7 +101,7 @@
 
 
 <!-- Diferenciais da Clínica -->
-<section class="differentials">
+<section class="differentials" id="diferenciais">
   <div class="container differentials__content">
 
     <div class="differentials__cards-photos">
@@ -144,7 +144,7 @@
 
 
 <!-- Especialidades -->
-<section class="specialties">
+<section class="specialties" id="especialidades">
   <h1>Nossas Especialidades</h1>
   <p>Tratamentos que são <strong>um sucesso</strong> aqui na Climes.</p>
 
@@ -153,21 +153,32 @@
       <div class="specialties__row">
         <img src="assets/swiper/tratamento.png" alt="Botox">
           <div class="gradient-btn specialties-gradient">
-            <button class="btn-about specialties-btn">Incontinência urinária</button>
+            <button 
+              class="btn-about specialties-btn js-walink"
+              data-href="https://wa.me/5511998364805?text=Ol%C3%A1%2C%20vim%20do%20site%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20tratamento%20de%20Soroterapia.">
+              Incontinência urinária
+            </button>
           </div>
       </div>
 
       <div class="specialties__row">
         <img src="assets/swiper/emagrecimento.png" alt="Tratamento 2">
           <div class="gradient-btn specialties-gradient">
-            <button class="btn-about specialties-btn">Emagrecimento</button>
+            <button 
+              class="btn-about specialties-btn js-walink"
+              data-href="https://wa.me/5511998364805?text=Ol%C3%A1%2C%20vim%20do%20site%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20tratamento%20de%20Soroterapia.">
+              Emagrecimento
+            </button>
           </div>
-        
       </div>
       <div class="specialties__row">
         <img src="assets/swiper/soroterapia.png" alt="Tratamento 3">
         <div class="gradient-btn specialties-gradient">
-          <button class="btn-about specialties-btn">Soroterapia</button>
+          <button 
+            class="btn-about specialties-btn js-walink"
+            data-href="https://wa.me/5511998364805?text=Ol%C3%A1%2C%20vim%20do%20site%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20tratamento%20de%20Soroterapia."
+            >Soroterapia
+          </button>
         </div>
       </div>
     </div>
@@ -321,26 +332,26 @@
       </p>
 
       <div class="footer__actions">
-        <a href="#agendar" class="btn-primary-large">Agende uma consulta</a>
+        <a href="https://wa.me/5511998364805?text=Ol%C3%A1%2C%20vim%20do%20site%20e%20gostaria%20de%20agendar%20uma%20consulta." class="btn-primary-large">Agende uma consulta</a>
         <div class="footer__socials">
-          <a href="#">
+          <a href="https://www.instagram.com/climesclinica/"  target="_blank" rel="noopener noreferrer">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M7.8 2H16.2C19.4 2 22 4.6 22 7.8V16.2C22 17.7383 21.3889 19.2135 20.3012 20.3012C19.2135 21.3889 17.7383 22 16.2 22H7.8C4.6 22 2 19.4 2 16.2V7.8C2 6.26174 2.61107 4.78649 3.69878 3.69878C4.78649 2.61107 6.26174 2 7.8 2ZM7.6 4C6.64522 4 5.72955 4.37928 5.05442 5.05442C4.37928 5.72955 4 6.64522 4 7.6V16.4C4 18.39 5.61 20 7.6 20H16.4C17.3548 20 18.2705 19.6207 18.9456 18.9456C19.6207 18.2705 20 17.3548 20 16.4V7.6C20 5.61 18.39 4 16.4 4H7.6ZM17.25 5.5C17.5815 5.5 17.8995 5.6317 18.1339 5.86612C18.3683 6.10054 18.5 6.41848 18.5 6.75C18.5 7.08152 18.3683 7.39946 18.1339 7.63388C17.8995 7.8683 17.5815 8 17.25 8C16.9185 8 16.6005 7.8683 16.3661 7.63388C16.1317 7.39946 16 7.08152 16 6.75C16 6.41848 16.1317 6.10054 16.3661 5.86612C16.6005 5.6317 16.9185 5.5 17.25 5.5ZM12 7C13.3261 7 14.5979 7.52678 15.5355 8.46447C16.4732 9.40215 17 10.6739 17 12C17 13.3261 16.4732 14.5979 15.5355 15.5355C14.5979 16.4732 13.3261 17 12 17C10.6739 17 9.40215 16.4732 8.46447 15.5355C7.52678 14.5979 7 13.3261 7 12C7 10.6739 7.52678 9.40215 8.46447 8.46447C9.40215 7.52678 10.6739 7 12 7ZM12 9C11.2044 9 10.4413 9.31607 9.87868 9.87868C9.31607 10.4413 9 11.2044 9 12C9 12.7956 9.31607 13.5587 9.87868 14.1213C10.4413 14.6839 11.2044 15 12 15C12.7956 15 13.5587 14.6839 14.1213 14.1213C14.6839 13.5587 15 12.7956 15 12C15 11.2044 14.6839 10.4413 14.1213 9.87868C13.5587 9.31607 12.7956 9 12 9Z" fill="#8B686C"/>
             </svg>
           </a>
-          <a href="#">
+          <a href="mailto:atendimento.climes@gmail.com" target="_blank" rel="noopener noreferrer">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g id="eva:email-outline">
                 <path id="Vector" d="M19 4H5C4.20435 4 3.44129 4.31607 2.87868 4.87868C2.31607 5.44129 2 6.20435 2 7V17C2 17.7956 2.31607 18.5587 2.87868 19.1213C3.44129 19.6839 4.20435 20 5 20H19C19.7956 20 20.5587 19.6839 21.1213 19.1213C21.6839 18.5587 22 17.7956 22 17V7C22 6.20435 21.6839 5.44129 21.1213 4.87868C20.5587 4.31607 19.7956 4 19 4ZM18.33 6L12 10.75L5.67 6H18.33ZM19 18H5C4.73478 18 4.48043 17.8946 4.29289 17.7071C4.10536 17.5196 4 17.2652 4 17V7.25L11.4 12.8C11.5731 12.9298 11.7836 13 12 13C12.2164 13 12.4269 12.9298 12.6 12.8L20 7.25V17C20 17.2652 19.8946 17.5196 19.7071 17.7071C19.5196 17.8946 19.2652 18 19 18Z" fill="#8B686C"/>
               </g>
             </svg>
           </a>
-          <a href="#">
+          <a href="https://g.co/kgs/QqUgMvw" target="_blank" rel="noopener noreferrer">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M12 5.50004C10.7789 5.50031 9.58252 5.84456 8.548 6.49334C7.51348 7.14213 6.68263 8.06921 6.15066 9.16837C5.61869 10.2675 5.4071 11.4943 5.54014 12.7082C5.67317 13.922 6.14546 15.0739 6.90288 16.0317C7.66029 16.9896 8.67221 17.7147 9.8227 18.124C10.9732 18.5333 12.2157 18.6103 13.4079 18.346C14.6001 18.0818 15.6938 17.4871 16.5636 16.63C17.4334 15.773 18.0442 14.6882 18.326 13.5H13C12.6022 13.5 12.2206 13.342 11.9393 13.0607C11.658 12.7794 11.5 12.3979 11.5 12C11.5 11.6022 11.658 11.2207 11.9393 10.9394C12.2206 10.6581 12.6022 10.5 13 10.5H20C20.3978 10.5 20.7794 10.6581 21.0607 10.9394C21.342 11.2207 21.5 11.6022 21.5 12C21.5 14.1968 20.7387 16.3257 19.3457 18.0242C17.9526 19.7228 16.014 20.8862 13.8598 21.3162C11.7055 21.7462 9.4688 21.4164 7.53037 20.3829C5.59194 19.3493 4.0716 17.6759 3.22815 15.6476C2.3847 13.6192 2.27027 11.3612 2.90434 9.25794C3.53841 7.15469 4.88179 5.33618 6.7058 4.11196C8.52981 2.88775 10.7217 2.33349 12.9084 2.54354C15.0951 2.7536 17.1414 3.71498 18.699 5.26404C18.8387 5.40298 18.9496 5.56806 19.0254 5.74987C19.1013 5.93168 19.1406 6.12665 19.1411 6.32365C19.1416 6.52065 19.1033 6.71582 19.0284 6.89802C18.9535 7.08022 18.8434 7.24588 18.7045 7.38554C18.5656 7.5252 18.4005 7.63612 18.2187 7.71198C18.0369 7.78785 17.8419 7.82715 17.6449 7.82766C17.247 7.82869 16.8651 7.67164 16.583 7.39104C15.3664 6.17812 13.7179 5.49794 12 5.50004Z" fill="#8B686C"/>
             </svg>
           </a>
-          <a href="#">
+          <a href="tel:+5511998364805" target="_blank" rel="noopener noreferrer">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g id="material-symbols:call">
                 <path id="Vector" d="M19.95 21C17.8667 21 15.8083 20.546 13.775 19.638C11.7417 18.73 9.89167 17.4423 8.225 15.775C6.55833 14.1077 5.271 12.2577 4.363 10.225C3.455 8.19233 3.00067 6.134 3 4.05C3 3.75 3.1 3.5 3.3 3.3C3.5 3.1 3.75 3 4.05 3H8.1C8.33333 3 8.54167 3.07933 8.725 3.238C8.90833 3.39667 9.01667 3.584 9.05 3.8L9.7 7.3C9.73333 7.56667 9.725 7.79167 9.675 7.975C9.625 8.15833 9.53333 8.31667 9.4 8.45L6.975 10.9C7.30833 11.5167 7.704 12.1123 8.162 12.687C8.62 13.2617 9.12433 13.816 9.675 14.35C10.1917 14.8667 10.7333 15.346 11.3 15.788C11.8667 16.23 12.4667 16.634 13.1 17L15.45 14.65C15.6 14.5 15.796 14.3877 16.038 14.313C16.28 14.2383 16.5173 14.2173 16.75 14.25L20.2 14.95C20.4333 15.0167 20.625 15.1377 20.775 15.313C20.925 15.4883 21 15.684 21 15.9V19.95C21 20.25 20.9 20.5 20.7 20.7C20.5 20.9 20.25 21 19.95 21Z" fill="#8B686C"/>
