add texto e mudança da foto do footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="container about__content">
     <div class="about__text">
       <h1>Inovação e cuidado em<br> tratamentos modernos</h1>
-      <p>Desde 2004, trazendo excelência em <b>Ginecologia e<br> Obstetrícia</b> proporcionando a <b>recuperação de sua<br> autoconfiança</b> com procedimentos que<br> <b>rejuvenescem, fortalecem e revitalizam.</b></p>
+      <p>Desde 2004, trazendo excelência em <b>Ginecologia e<br> Obstetrícia</b> proporcionando a <b>recuperação de sua<br> autoconfiança</b> com procedimentos que <b>rejuvenescem<br> fortalecem e revitalizam sua saúde íntima.</b></p>
       <div class="gradient-btn">
         <button class="btn-about">Agendar uma Consulta</button>
       </div>
@@ -114,7 +114,7 @@
           <div class="card">
             <img src="assets/svg/Group.svg" alt="Imagem 1">
             <h2>Equipe Qualificada</h2>
-            <p>Profissionais experientes prontos<br> para cuidar da sua saúde com<br> excelência.</p>
+            <p>Nutrólogos e ginecologistas<br> prontos para cuidar da sua<br> saúde com excelência.</p>
           </div>
           <div class="card">
             <img src="assets/svg/check.svg" alt="Imagem 2">
